# Agentic_ML

./: README.md  pyproject.toml  requirements.txt
agentic-ml/orchestrator/: agent_definitions.py  agent_orchestrator.py
agentic-ml/setup/: setup_project.py
agentic_ml/: main.py
agentic_ml/agent/: tools.py
agentic_ml/configs/: config.yaml  config_fmri.yaml  config_ollama.yaml  initial_prompt.txt
agentic_ml/directives/: agency.py  root_orchestrator_template.md
agentic_ml/instrumenting/: README.md  __init__.py  base.py  instrumentor.py  phoenix.py  phoenix_instrumentor.py
agentic_ml/orchestrator/: agent_definitions.py  agent_orchestrator.py
agentic_ml/raw_data/: deepmind_medical_dataset.csv
agentic_ml/setup/: README.md  setup_project.py
agentic_ml/utils/: util_functions.py
configs/: config.yaml  config_ai_hub.yaml  initial_directive_fmri.txt  initial_project_config.json
src/: agent_orchestrator.py  main.py
src/agent_environment/agent/: tools.py
src/agent_environment/agent/files/: scratchpad.txt
src/directives/: ml_directive.py
src/orchestrator/: agent_orchestrator.py
src/phases/: ml_directive.py
src/phases/data_phase/: data_objective.py
src/setup/: setup.py  setup_project.py
src/utils/: util_functions.py
